Delete column width from center-about as causing text layout issues. Add small changes to html for center about and about us info sections.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,6 @@ h2 {
     margin-right: 22%;
     margin-left: 17%;
     padding-bottom: 550px;
-    column-width: 40px;
     height: 50px;
     background-color: #ff00b3
 }
